tdf#156474 sw tracked table column: fix accept of insertion

Accepting tracked table column insertion didn't reset
HasTextChangesOnly bit of the table cells, resulting
blue/pink cells (i.e. column change) after modifying
only text content of the text, and later bad column
deletion at accepting text-only deletion and at rejecting
text-only insertion.

Follow-up to commit 472abf99a4d90d7a53316394a2e51a26b7e62345
"tdf#155341 sw tracked table column: add insertion".

Change-Id: I2e06e1b064d51c5e7cf8140a5fd7932e7be4f765
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154935
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 4caebc0b54461a1aadc8378a6749c0d5f05d7204)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154951